fix z-index

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ nav {
     top: 0;
     width: 100%;
     background-color: white;
+    z-index: 10;
     /* background-image: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1)); */
 }
 
